--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,4 +1,3 @@
- ---
 - hosts: localhost
   tasks:
   - name: start an instance with a public IP address
@@ -16,26 +15,29 @@
         Environment: Testing
     register: returned_stuff
 
-  # - debug:
-  #     var: returned_stuff.instance_ids
-  
-  # - debug:
-  #     var: returned_stuff.instances[0].network_interfaces[0].association.public_ip
-  
-  - name: Update cache
-    remote_user: ubuntu
-    become: true
-    delegate_to: "{{ returned_stuff.instances[0].network_interfaces[0].association.public_ip }}"
-    apt: update_cache=yes   
-  
   - name: Install redis
     remote_user: ubuntu
     become: true
     delegate_to: "{{ returned_stuff.instances[0].network_interfaces[0].association.public_ip }}"
-    apt: name=redis-server state=latest
-  
-  - name: Restart Redis Server
+    apt:
+      name: redis
+      state: latest
+      update_cache: yes
+
+  - name: "get nodejs"
     remote_user: ubuntu
     become: true
     delegate_to: "{{ returned_stuff.instances[0].network_interfaces[0].association.public_ip }}"
-    service: name=redis state=restarted enabled=yes
+    ansible.builtin.shell: curl -sL https://deb.nodesource.com/setup_16.x -o nodesource_setup.sh
+  
+  - name: "Install node"
+    remote_user: ubuntu
+    become: true
+    delegate_to: "{{ returned_stuff.instances[0].network_interfaces[0].association.public_ip }}"
+    ansible.builtin.shell: bash nodesource_setup.sh
+  
+  - name: "Update npm"
+    remote_user: ubuntu
+    become: true
+    delegate_to: "{{ returned_stuff.instances[0].network_interfaces[0].association.public_ip }}"
+    ansible.builtin.shell: apt install nodejs -y
