--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          # port: "22"
+          port: ${{secrets.PORT}}
           script: mkdir -p /home/ubuntu/www
 
       - name: Deploy to my EC2 instance
@@ -35,7 +35,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          port: "22"
+          port: ${{secrets.PORT}}
           script: |
             cd /home/ubuntu/www
             node app.js
