--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,15 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v1
       
-      - name: multiple command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{secrets.PORT}}
-          # script: mkdir -p /home/ubuntu/www
-          script: whoami
+      # - name: multiple command
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ${{ secrets.USERNAME }}
+      #     key: ${{ secrets.EC2_SSH_KEY }}
+      #     port: ${{secrets.PORT}}
+      #     # script: mkdir -p /home/ubuntu/www
+      #     script: whoami
 
       - name: Deploy to my EC2 instance
         uses: easingthemes/ssh-deploy@v2.1.5
@@ -39,5 +39,6 @@ jobs:
           port: ${{secrets.PORT}}
           script: |
             cd /home/ubuntu/www
+            npm i
             node app.js
 # sdasd
