--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Tomyce12/ibm-devops-intern#readme",
   "dependencies": {
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "express-visitor-counter": "^1.4.0",
