deploy node start edit

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
           script: |
             cd /home/ubuntu/www
             npm i
-            node app.js
+            node start
 # sdasd
