--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           script: |
             cd /home/ubuntu/www
             npm i
-            pm2 start app.js --watch
+            pm2 restart app.js --watch
